--- a/main.html
+++ b/main.html
@@ -2,14 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>World Cup Cricket Statistics</title>
+    <style>
+        table {
+            width: 80%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            border: 2px solid #333;
+        }
+        thead {
+            background-color: #333;
+            color: #fff;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px;
+            text-align: center;
+        }
+        tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        tbody tr:hover {
+            background-color: #f5deb3;
+        }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <!-- add table here -->
+    <table>
+        <!-- Table Caption -->
+        <caption>World Cup Cricket Statistics</caption>
 
-        
+        <!-- Table Header -->
+        <thead>
+            <tr>
+                <th>Team</th>
+                <th>Matches Played</th>
+                <th>Wins</th>
+                <th>Losses</th>
+                <th>Winning Percentage</th>
+            </tr>
+        </thead>
+
+        <!-- Table Body -->
+        <tbody>
+            <tr>
+                <td>Australia</td>
+                <td>94</td>
+                <td>69</td>
+                <td>25</td>
+                <td>73.40%</td>
+            </tr>
+            <tr>
+                <td>India</td>
+                <td>84</td>
+                <td>53</td>
+                <td>31</td>
+                <td>63.10%</td>
+            </tr>
+            <tr>
+                <td>England</td>
+                <td>83</td>
+                <td>48</td>
+                <td>35</td>
+                <td>57.83%</td>
+            </tr>
+            <tr>
+                <td>New Zealand</td>
+                <td>89</td>
+                <td>53</td>
+                <td>36</td>
+                <td>59.55%</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
